removed unused files fixed filenaming convention

--- a/app/views/directives/checkNav.html
+++ b/app/views/directives/checkNav.html
@@ -1,4 +1,4 @@
-<ul class="nav navbar-nav">
+<ul class="nav navbar-nav" ng-show="ifLoggedIn">
     <li ng-class="{'active navactive': isPage('devices')}"><a href="#/devices">Devices</a></li>
     <li ng-class="{'active navactive': isPage('checked-in')}"><a ng-href="#/checked-in">Checked-In</a></li>
     <li ng-class="{'active navactive': isPage('checked-out')}"><a ng-href="#/checked-out">Checked-Out</a></li>
