--- a/app/views/device-list.html
+++ b/app/views/device-list.html
@@ -1,5 +1,6 @@
 <div class="row">
     <div class="col-lg-12">
+        <a class="btn btn-info text-center checkout-click add-device" href="#/add-device">Add Device</a>
         <!--Handlebar template for list of devices -->
         <table class="table">
             <thead>
